# data_engineering_zoomcamp_2026

./: .gitignore  README.md  data_engineering_zoomcamp_2026.code-workspace  main.py  package-lock.json  pyproject.toml  requirements.txt
Homeworks/1_Docker_SQL/: README.md
Homeworks/2_Kestra/: README.md  homeworkQ3Q4Q5_etl_flow_kestra.yaml  homeworkQ3_Q4_etl_flow_kestra.yaml  homework_Q1_Q2_elt_flow_kestra.yaml
Homeworks/3_BigQuery/: README copy.md  README.md  datastorage_ingest_PROD.py  dlt_duckdb_ingesting_TEST.ipynb
Homeworks/3_BigQuery/3_data_backup/: load.sql  schema.sql
Homeworks/4_dbt/: .user.yml  README.md  dbt_project.yml  ingest_duckdb.py  ingest_duckdb_fhv.py  notes  query.py
Homeworks/5_Data_Platforms/: README.md
Homeworks/6_Batch/: README.md
Homeworks/7_Streaming/: README.md
Module_1_Docker/: 0.Docker.md
Module_1_Docker/dev/docker/: .wslconfig  0.docker.md  Dockerfile  docker-compose copy.yaml  docker-compose.yaml  docker-compose_old.yaml
Module_1_Docker/dev/notebook/: 0.notebooks  notebook_ingesting_zone.ipynb
Module_1_Docker/dev/ny_taxi_postgres_data/: 0.explanations
Module_1_Docker/dev/pipeline/: 0.pipeline.md  ingest_data.py  ingest_data_green_taxi_parquet.py  notebook_pipeline.ipynb  pipeline.py
Module_1_Docker/dev/queries/: 0.Connection
Module_1_Docker/pipeline/: notebook_pipeline.ipynb  pipeline.py  test.py
Module_1_Docker/prod/: 0.Production
Module_1_Terraform/dev/: .terraform.lock.hcl  variables.tf
Module_4_dbt/: .user.yml
Module_5_Spark/: README.md
Module_6_Batch/: README.md
(+24 files in other folders)
