[project]
name = "data-engineering-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "docker==7.1.0",
    "idna==3.11",
    "pywin32==311",
    "requests==2.32.5",
    "urllib3==2.6.3",
]
